--- a/client/app/styles/EchoBoard.css
+++ b/client/app/styles/EchoBoard.css
@@ -15,7 +15,7 @@
 }
 
 .echo-board-card {
-  margin: 15px 0px;
+  margin: 15px 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -23,7 +23,7 @@
 
 .echo-board-card-content {
   flex: 1 1 auto;
-  padding-bottom: 0px;
+  padding-bottom: 0;
 }
 
 .echo-board-card-actions {
