--- a/client/app/styles/LandingPage.css
+++ b/client/app/styles/LandingPage.css
@@ -1,5 +1,5 @@
 .main__background-picture{
-    background-image: url("./../image/Final_background.jpeg");
+    background-image: url("./../image/Final_background_copy.png");
     background-color: #4589e3;
     background-size: cover; 
     height: 100vh;
