Changed fallback background color in landing page

--- a/client/app/styles/LandingPage.css
+++ b/client/app/styles/LandingPage.css
@@ -1,6 +1,6 @@
 .main__background-picture{
     background-image: url("./../image/Final_background_copy.png");
-    background-color: #4589e3;
+    background-color: #111c3f;
     background-size: cover; 
     height: 100vh;
 }
