--- a/client/app/styles/AccountMenu.css
+++ b/client/app/styles/AccountMenu.css
@@ -19,27 +19,14 @@
 }
 
 .account-menu__avatar {
-    width: 32px;
-    height: 32px;
+    width: 40px;
+    height: 40px;
 }
 
 .account-menu {
     overflow: visible;
     filter: drop-shadow(0px 2px 8px rgba(0,0,0,0.32));
     margin-top: 1.5rem;
-}
-
-.account-menu:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 14px;
-    width: 10px;
-    height: 10px;
-    background-color: #32CD32;
-    transform: translateY(-50%) rotate(45deg);
-    z-index: 0;
 }
 
 .account-menu__list .MuiAvatar-root {
@@ -52,4 +39,9 @@
 .account-menu__link {
     text-decoration: none;
     color: black;
+}
+
+.account-menu__tooltip {
+    padding: 0;
+    margin: 0;
 }
