--- a/client/app/styles/EchoBoard.css
+++ b/client/app/styles/EchoBoard.css
@@ -1,3 +1,28 @@
+@media (max-width: 600px) {
+  .echo-board-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .echo-board-card {
+    margin: 15px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+   
+  }
+
+  .echo-board-solution-btn {
+    margin-right: 15px;
+    margin-left: 95px;
+    width: 10px;
+    height: 60px;
+    
+  }
+
+}
+
 .echo-board-main {
   display: flex;
   flex-direction: column;
