--- a/client/app/styles/EchoBoard.css
+++ b/client/app/styles/EchoBoard.css
@@ -6,6 +6,7 @@
   }
 
   .echo-board-card {
+    font-family: "Gill Sans", sans-serif;
     margin: 15px 0;
     display: flex;
     flex-direction: column;
@@ -19,6 +20,12 @@
     width: 10px;
     height: 60px;
     
+  }
+
+  .echo-board-card-content {
+    
+    flex: 1 1 auto;
+    padding-bottom: 0;
   }
 
 }
