--- a/client/app/styles/UserPage.css
+++ b/client/app/styles/UserPage.css
@@ -1,4 +1,89 @@
 .nav-bar__user-page {
-    background: rgb(6, 37, 79);
-    background: linear-gradient(90deg, rgba(6, 37, 79, 1) 5%, rgba(28, 84, 112, 1) 52%, rgba(4, 39, 88, 1) 97%);
+  background: rgb(6, 37, 79);
+  background: linear-gradient(
+    90deg,
+    rgba(6, 37, 79, 1) 5%,
+    rgba(28, 84, 112, 1) 52%,
+    rgba(4, 39, 88, 1) 97%
+  );
+}
+.home-button-mobile {
+  display: none; /* Hide "Main" text on larger screens */
+}
+.home-button-desktop {
+  display: inline; /* Display "Starting page" text on larger screens */
+}
+.share-your-problem-button {
+  width: 30%;
+  max-Width: 300px;
+  margin: 15px auto;
+}
+@media (max-width: 600px) {
+  main {
+    width: 100%;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .nav-bar__user-page {
+    width: 100%;
+    
+  }
+  .echo-board-logo-mobile {
+    display: none; /* Hide on mobile view by default */
+  }
+  .home-button-mobile {
+    display: inline; /* Display "Home" text on smaller screens */
+  }
+  
+  .home-button-desktop {
+    display: none; /* Hide "Starting page" text on smaller screens */
+  }
+  main button {
+    width: 10%; 
+    max-width: 200px; 
+    margin: 10px auto;
+  }
+  .nav-bar__user-page Button:nth-child(1) {
+    font-size: 12px; 
+    margin-left: 60px;
+    margin-right: 55px;
+  }
+  .nav-bar__user-page Button:nth-child(2) {
+    font-size: 12px; 
+    margin-left: 0px;
+    margin-right: 0px; 
+  }
+   /* Adjust styles for the EchoBoardLogo and its container */
+   .nav-bar__user-page .MuiBox-root {
+  
+    margin-left: 0px; 
+    margin-right: 0px;
+  }
+  .nav-bar__user-page img {
+    margin-right: 0px;
+    margin-left: 0px; 
+    width: 25px; 
+    height: 25px; 
+  }
+
+
+  h1 {
+    display: none;
+    text-align: center;
+    max-width: 90%;
+    margin-top: 40px;
+  }
+
+  .share-your-problem-button {
+    width: 30%;
+    height: 10%;
+    background-color: rgb(219, 214, 214);
+    margin-bottom: 70px;
+  }
+
+  .sort-button {
+    background-color: rgb(219, 214, 214);
+  }
 }
