--- a/client/app/styles/UserPage.css
+++ b/client/app/styles/UserPage.css
@@ -6,4 +6,9 @@
     rgba(28, 84, 112, 1) 52%,
     rgba(4, 39, 88, 1) 97%
   );
+  
+}
+
+.tool-bar__user-page {
+  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
 }
