--- a/client/app/styles/EchoBoard.css
+++ b/client/app/styles/EchoBoard.css
@@ -59,10 +59,22 @@
     max-width: 800px;
   }
 
+  /* .leave-a-comment-button,
+  .echo-board-solution-btn {
+    margin: 0 auto;
+  } */
+
+  .leave-a-comment-button-container {
+    margin: 0 auto;
+  }
+
   .leave-a-comment-button{
-    width: 60%;
-    height: 20%;
+    width: 110px;
+    height: 45px;
+    margin-bottom: 20px;
+    margin-right: 5px;
     font-family: "Gill Sans", sans-serif;
+    font-size: 10px;
     color: #ffffff;
    background: rgb(6, 37, 79);
   background: linear-gradient(
@@ -77,11 +89,36 @@
 
   .echo-board-solution-btn {
     font-family: "Gill Sans", sans-serif;
-    margin-right: 90px;
-    margin-left: 110px;
-    width: 400px;
-    height: 60px;
+    font-size: 10px;
+    margin-left: 5px;
+    margin-bottom: 20px;
+    width: 120px;
+    height: 45px;
+    color: #ffffff;
+    background: rgb(6, 37, 79);
+   background: linear-gradient(
+     90deg,
+     rgba(6, 37, 79, 1) 5%,
+     rgba(28, 84, 112, 1) 52%,
+     rgba(4, 39, 88, 1) 97%
+   );
+   box-shadow: rgba(0, 0, 0, 0.3)
+   0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 
+  }
+
+  .post-comment__button{
+    font-family: "Gill Sans", sans-serif;
+    color: #ffffff;
+    background: rgb(6, 37, 79);
+   background: linear-gradient(
+     90deg,
+     rgba(6, 37, 79, 1) 5%,
+     rgba(28, 84, 112, 1) 52%,
+     rgba(4, 39, 88, 1) 97%
+   );
+   box-shadow: rgba(0, 0, 0, 0.3)
+   0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
   }
 
   .card-user-name{
