--- a/client/app/styles/UserPage.css
+++ b/client/app/styles/UserPage.css
@@ -30,9 +30,15 @@
     align-items: center;
   }
   .nav-bar__user-page {
+    font-family: "Gill Sans", sans-serif;
+    font-size: 12px;
     width: 100%;
+    display: flex;
+    justify-content: space-around; /* Adjusted spacing */
+    align-items: center;
     
   }
+ 
   .echo-board-logo-mobile {
     display: none; /* Hide on mobile view by default */
   }
@@ -43,34 +49,19 @@
   .home-button-desktop {
     display: none; /* Hide "Starting page" text on smaller screens */
   }
-  main button {
-    width: 10%; 
-    max-width: 200px; 
-    margin: 10px auto;
-  }
+
   .nav-bar__user-page Button:nth-child(1) {
-    font-family: "Gill Sans", sans-serif;
-    font-size: 12px; 
-    margin-left: 60px;
-    margin-right: 55px;
+    margin-left: 20px;
   }
+
   .nav-bar__user-page Button:nth-child(2) {
-    font-family: "Gill Sans", sans-serif;
-    font-size: 12px; 
-    margin-left: 0px;
-    margin-right: 0px; 
+    margin-right: 20px;
   }
    /* Adjust styles for the EchoBoardLogo and its container */
    .nav-bar__user-page .MuiBox-root {
   
     margin-left: 0px; 
     margin-right: 0px;
-  }
-  .nav-bar__user-page img {
-    margin-right: 0px;
-    margin-left: 0px; 
-    width: 25px; 
-    height: 25px; 
   }
 
 
