--- a/client/app/styles/EchoBoard.css
+++ b/client/app/styles/EchoBoard.css
@@ -31,7 +31,16 @@
   margin-bottom: 15px;
 }
 
+
+
 @media (max-width: 600px) {
+
+  .nav-bar__user-page .home-button-mobile,
+  .nav-bar__user-page .home-button-desktop,
+  .chat-button {
+    display: none;
+  }
+
   .echo-board-main {
     display: flex;
     flex-direction: column;
@@ -59,10 +68,6 @@
     max-width: 800px;
   }
 
-  /* .leave-a-comment-button,
-  .echo-board-solution-btn {
-    margin: 0 auto;
-  } */
 
   .leave-a-comment-button-container {
     margin: 0 auto;
