--- a/client/app/styles/UserPage.css
+++ b/client/app/styles/UserPage.css
@@ -8,7 +8,7 @@
   );
 }
 .home-button-mobile {
-  /* display: none; Hide "Main" text on larger screens */
+  display: none; /* Hide "Main" text on larger screens */
 }
 .home-button-desktop {
   display: inline; /* Display "Starting page" text on larger screens */
@@ -17,6 +17,16 @@
   width: 30%;
   max-Width: 300px;
   margin: 15px auto;
+}
+
+.post-comment__form{
+  margin-bottom: 20px;
+}
+
+.post-comment__button{
+  margin-top: 10px;
+  width: 110px;
+  margin: 0 auto;
 }
 
 
@@ -103,5 +113,15 @@
   );
   box-shadow: rgba(0, 0, 0, 0.3)
   0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  }
+
+  .post-comment__form{
+    margin-bottom: 20px;
+  }
+
+  .post-comment__button{
+    margin-top: 10px;
+    width: 110px;
+    margin: 0 auto;
   }
 }
