--- a/client/app/styles/EchoBoard.css
+++ b/client/app/styles/EchoBoard.css
@@ -19,6 +19,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  
 }
 
 .echo-board-card-content {
@@ -34,6 +35,17 @@
 .home-button-mobile {
   display: none;
 }
+
+
+
+
+@media (min-width: 601px) {
+  .echo-board-solution-btn {
+    display: block; /* Ensure the button is a block element */
+    margin: 0 auto;
+  }
+}
+
 
 
 
