--- a/client/app/styles/CommentModal.css
+++ b/client/app/styles/CommentModal.css
@@ -20,7 +20,7 @@
   border: none;
   max-height: 400px;
   width: auto;
-  margin: 15px 25px 0 0;
+  /* margin: 15px 25px 0 0; */
   overflow-y: scroll;
 }
 
